# Hypermedia

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_SPRINT_2026-02-10.md  PROGRESS_REPORT.md  README.md  ROADMAP.md  TODO.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/: api_reference.md  installation.md  quickstart.md
documentation/: ARCHITECTURE_HM_DRIVE.md  ARCHITECTURE_HM_SCENE.md  MIGRATION_GUIDE.md  ROADMAP.md  SPECIFICATIONS_FONCTIONNELLES.md  SPECIFICATIONS_TECHNIQUES.md
examples/: phase1_basic_usage.py
examples/phase1/: basic_usage.py  checksum_demo.py
hypermedia/: __init__.py
hypermedia/common/: __init__.py
hypermedia/drive/: __init__.py  checksum.py  collection.py  database.py  deduplication.py  metadata_extractor.py  models.py
hypermedia/scene/: __init__.py
tests/: __init__.py  conftest.py  test_checksum_dedup.py  test_collection.py  test_database.py  test_drive_models.py  test_metadata_extractor.py  test_models.py
tests/test_drive/: __init__.py  test_checksum.py  test_collection.py  test_deduplication.py
